Fix correct test to get balance